k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teleportal-app
  labels:
    app.kubernetes.io/part-of: telenet-rhacm-demo
    app.kubernetes.io/managed-by: fluxcd
