k8s/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teleportal-demo
  namespace: teleportal-app
  labels:
    app.kubernetes.io/name: teleportal-demo
    app.kubernetes.io/instance: teleportal-demo
    app.kubernetes.io/part-of: telenet-rhacm-demo
    app.kubernetes.io/managed-by: fluxcd
    environment: demo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: teleportal-demo
    app.kubernetes.io/instance: teleportal-demo
